test/IRGen/jit-debugging.code
// %empty-directory(%t)
// RUN: not %target-language-frontend -use-jit -dump-jit invalid -interpret %s 2>&1 | %FileCheck -check-prefix CHECK-INVALID %s
// CHECK-INVALID: error: invalid value 'invalid' in 'dump-jit'

// RUN: %empty-directory(%t)
// RUN: cd %t && %target-language-frontend -use-jit -dump-jit toolchain-ir -interpret %s
// RUN: %FileCheck -check-prefix CHECK-LLIR %s < %t/main.ll
// CHECK-LLIR: ; ModuleID = 'main'

// RUN: %empty-directory(%t)
// RUN: cd %t && %target-language-frontend -use-jit -dump-jit object -interpret %s
// RUN: %toolchain-nm --defined-only --extern-only %t/main-jitted-objectbuffer.o | %FileCheck -check-prefix CHECK-OBJ %s
// CHECK-OBJ: T {{_?}}main

// REQUIRES: rdar66644853

immutable zero = 0
